# FIRE-order

./: .env  Cargo.toml  README.md
migrate/: migration.sql
shared/auth_validate/: Cargo.toml
shared/auth_validate/src/: jwt.rs
src/: main.rs
stockbit_order/: Cargo.toml
stockbit_order/src/: cfg.rs  constant.rs  db.rs  error.rs  lib.rs  logging.rs  main.rs  mdw.rs  redis.rs  req.rs  server.rs  socket.rs  svc.rs  utils.rs
stockbit_order/src/account/: model.rs  repo.rs
stockbit_order/src/order/: model.rs  repo.rs
stockbit_order/src/portfolio/: model.rs  repo.rs
stockbit_order/src/product/: model.rs  repo.rs
